<resources>
    <string name="app_name">NewTrivia</string>
    <string name="title">Trivia Flip Out!</string>
    <string name="true_title">true</string>
    <string name="false_title">false</string>
    <string name="previous_button">previous_button</string>
    <string name="next_button">next_button</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="are_you_ready">Are You Ready?</string>


</resources>